--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ subjects:
 - !lcc 'RM'
 - !lcsh 'Temperance'
 - !lcsh 'Alcohol -- Physiological effect'
+- GITenberg
 title: 'Alcohol: A Dangerous and Unnecessary Medicine, How and Why
 
   What Medical Writers Say'
